--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: R Client for http://data.taipei
 Version: 0.1
 Date: 2015-05-09
-Author: Wush Wu and XXX
+Author: Wush Wu and XXXX
 Maintainer: Wush Wu <wush978@gmail.com>
 Description: R Client for http://data.taipei
 License: GPL (>= 2)
